# Nova

./: .gitignore  BLUEPRINT.md  CLAUDE.md  Cargo.toml  README.md  build.ps1  build.rs  nova-server.manifest  nova.iss
VirtualDisplayDriver/: Nova.iss
VirtualDisplayDriver/SignedDrivers/ARM64/VDD/: vdd_settings.xml
shim/: audio_shim.cpp  shim.cpp
shim/NvEncoder/: NvEncoderD3D11.cpp  NvEncoderD3D11.h
shim/include/: NvCodecUtils.h
src/: app_launcher.rs  audio.rs  capture.rs  config.rs  control.rs  debug.rs  encoder.rs  input.rs  lib.rs  main.rs  pairing.rs  rtp.rs  rtsp.rs  secure_desktop.rs  service.rs  shutdown.rs  tray.rs  virtual_display.rs
src/capture/: dda.rs  desktop_switch.rs  mod.rs  wgc.rs
test/: sink_routing_test.cpp
