[package]
name = "nova-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# === Async Runtime + Web Server (RTSP + Pairing) ===
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"

# === Windows APIs (DXGI Desktop Duplication + D3D11) ===
windows = { version = "0.59", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Foundation",
    "Win32_System_Com"
]}

# === CLI ===
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
cc = "1.2"